--- a/src/app/formly-form-core/components/custom-date-input/custom-date-input.component.html
+++ b/src/app/formly-form-core/components/custom-date-input/custom-date-input.component.html
@@ -14,8 +14,8 @@
           maxLength="4"
           formControlName="year"
           [style.width]="'50px'"
-          [placeholder]="'yyyy' | translate"
-          [attr.aria-label]="'Year' | translate"
+          [placeholder]="'yyyy'"
+          [attr.aria-label]="'Year'"
           (keydown)="keyPress($event, year, index, formGroup.controls.year, 9999)"
           (keyup)="keyUp($event, year, index, 9999, 4)"
           (blur)="onBlur(formGroup.controls.year, 9999, 0, 4, false)"
@@ -31,8 +31,8 @@
           maxLength="2"
           formControlName="month"
           [style.width]="'27px'"
-          [placeholder]="'mm' | translate"
-          [attr.aria-label]="'Month' | translate"
+          [placeholder]="'mm'"
+          [attr.aria-label]="'Month'"
           (keydown)="keyPress($event, month, index, formGroup.controls.month, 12)"
           (keyup)="keyUp($event, month, index, 12)"
           (blur)="onBlur(formGroup.controls.month, 12)"
@@ -46,8 +46,8 @@
           maxLength="2"
           formControlName="day"
           [style.width]="'27px'"
-          [placeholder]="'dd' | translate"
-          [attr.aria-label]="'Day' | translate"
+          [placeholder]="'dd'"
+          [attr.aria-label]="'Day'"
           (keydown)="keyPress($event, day, index, formGroup.controls.day, 31)"
           (keyup)="keyUp($event, day, index, 31)"
           (blur)="onBlur(formGroup.controls.day, 31)"
