--- a/src/app/formly-form-core/display-types/page-form/page-form.component.html
+++ b/src/app/formly-form-core/display-types/page-form/page-form.component.html
@@ -7,7 +7,7 @@
       [ngClass]="{ 'mat-mini-fab': to.useSmallButtons, 'mat-fab': !to.useSmallButtons }"
       (click)="decrementPageFromIndex(selectedIndex - 1)">
 
-      <div class="button-content" [matTooltip]="getPreviousPageName(selectedIndex) | tokens: to">
+      <div class="button-content" [matTooltip]="getPreviousPageName(selectedIndex)">
         <mat-icon>arrow_back</mat-icon>
       </div>
     </button>
@@ -16,7 +16,7 @@
       *ngIf="selectedIndex !== 0 && isPrecedingPageInvalid(selectedIndex - 1, true)"
       class="page-form-error-icon"
       matTooltipClass="use-new-line"
-      matTooltip="{{ 'Errors on page(s): {{pages}}' | translate: { pages: getPrecedingPageNamesInError(selectedIndex) } | tokens: to }}">
+      matTooltip="{{ 'Errors on page(s): {{pages}}' }}">
 
       <mat-icon class="error-state material-icons">warning</mat-icon>
     </div>
@@ -26,7 +26,7 @@
 <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="changePage($event)" [disablePagination]="to.disablePagination || false">
   <mat-tab *ngFor="let page of field.fieldGroup; let index = index">
     <div class="title" [style.display]="page.templateOptions?.hideLabel ? 'none' : ''">
-      {{ page.templateOptions?._translationKeyLabel | translate | tokens: to }}
+      {{ page.templateOptions?.label }}
     </div>
 
     <formly-field [field]="page" *ngIf="selectedIndex === index" [ngClass]="page.templateOptions?.classes"></formly-field>
@@ -44,7 +44,7 @@
       [disabled]="to.linear && isPrecedingPageInvalid(selectedIndex)"
       (click)="incrementPageFromIndex(selectedIndex + 1)">
 
-      <div class="button-content" [matTooltip]="getNextPageName(selectedIndex) | tokens: to">
+      <div class="button-content" [matTooltip]="getNextPageName(selectedIndex)">
         <mat-icon>arrow_forward</mat-icon>
       </div>
     </button>
@@ -53,7 +53,7 @@
       *ngIf="isSubsequentPageInvalid(selectedIndex + 1, true)"
       class="page-form-error-icon"
       matTooltipClass="use-new-line"
-      matTooltip="{{ 'Errors on page(s): {{pages}}' | translate: { pages: getSubsequentPageNamesInError(selectedIndex + 1) } | tokens: to }}">
+      matTooltip="{{ 'Errors on page(s): {{pages}}' }}">
 
       <mat-icon class="error-state material-icons">warning</mat-icon>
     </div>
@@ -66,7 +66,7 @@
     class="mat-button-base mat-primary"
     [ngClass]="{ 'mat-mini-fab': to.useSmallButtons, 'mat-fab': !to.useSmallButtons, 'mat-button-disabled': form.invalid }">
 
-    <div class="button-content" [matTooltip]="'Submit' | translate">
+    <div class="button-content" [matTooltip]="'Submit'">
       <mat-icon>done</mat-icon>
     </div>
   </button>
@@ -77,7 +77,7 @@
   <div class="page-button-wrapper">
     <div class="page-button" [ngStyle]="{ 'visibility': selectedIndex === 0 ? 'hidden' : 'unset'}">
       <button type="button" mat-icon-button color="primary" (click)="decrementPageFromIndex(selectedIndex - 1)">
-        <div class="button-content" [matTooltip]="getPreviousPageName(selectedIndex) | tokens: to">
+        <div class="button-content" [matTooltip]="getPreviousPageName(selectedIndex)">
           <mat-icon>arrow_back</mat-icon>
         </div>
       </button>
@@ -85,7 +85,7 @@
       <div
         *ngIf="selectedIndex !== 0 && isPrecedingPageInvalid(selectedIndex - 1, true)"
         matTooltipClass="use-new-line" class="page-form-error-icon"
-        matTooltip="{{ 'Errors on page(s): {{pages}}' | translate: { pages: getPrecedingPageNamesInError(selectedIndex) } | tokens: to }}">
+        matTooltip="{{ 'Errors on page(s): {{pages}}' }}">
 
         <mat-icon class="error-state material-icons">warning</mat-icon>
       </div>
@@ -97,7 +97,7 @@
       <div *ngIf="isSubsequentPageInvalid(selectedIndex + 1, true)"
         matTooltipClass="use-new-line"
         class="page-form-error-icon"
-        matTooltip="{{ 'Errors on page(s): {{pages}}' | translate: { pages: getSubsequentPageNamesInError(selectedIndex + 1) } | tokens: to }}">
+        matTooltip="{{ 'Errors on page(s): {{pages}}' }}">
 
         <mat-icon class="error-state material-icons">warning</mat-icon>
       </div>
@@ -110,7 +110,7 @@
         [disabled]="to.linear && isPrecedingPageInvalid(selectedIndex)"
         (click)="incrementPageFromIndex(selectedIndex + 1)">
 
-        <div class="button-content" [matTooltip]="getNextPageName(selectedIndex) | tokens: to">
+        <div class="button-content" [matTooltip]="getNextPageName(selectedIndex)">
           <mat-icon>arrow_forward</mat-icon>
         </div>
       </button>
@@ -123,7 +123,7 @@
       color="primary"
       [disabled]="form.invalid">
 
-      <div class="button-content" [matTooltip]="'Submit' | translate">
+      <div class="button-content" [matTooltip]="'Submit'">
         <mat-icon>done</mat-icon>
       </div>
     </button>
