--- a/src/app/formly-form-json-schema-builder/components/expression/expression-builder/expression-builder.component.html
+++ b/src/app/formly-form-json-schema-builder/components/expression/expression-builder/expression-builder.component.html
@@ -6,7 +6,7 @@
       <div class="center-content flex">
         <mat-icon>add</mat-icon>
 
-        <div class="pad-left-half" translate>
+        <div class="pad-left-half">
           Add Rule
         </div>
       </div>
