--- a/src/app/formly-form-core/components/errors-and-hints/errors-and-hints.component.html
+++ b/src/app/formly-form-core/components/errors-and-hints/errors-and-hints.component.html
@@ -1,12 +1,12 @@
-<!-- This should remain hidden as its built from Formly's error states and will not pipe to tokens -->
+<!-- This should remain hidden as its built from Formly's error states -->
 <formly-validation-message #validationMessage [field]="field" [style.display]="'none'"></formly-validation-message>
 
 <mat-error *ngIf="validationMessage.errorMessage && field?.formControl?.touched" class="body-text error-text">
   <ng-container *ngFor="let errorMessage of getErrorMessages(validationMessage.errorMessage); let last = last;">
-    {{ errorMessage | tokens: to }}<br *ngIf="!last">
+    {{ errorMessage }}<br *ngIf="!last">
   </ng-container>
 </mat-error>
 
 <mat-hint *ngIf="field?.templateOptions?.hint && !(validationMessage.errorMessage && field?.formControl?.touched)" class="body-text">
-  {{ field.templateOptions?._translationKeyHint | translate | tokens: to }}
+  {{ field.templateOptions?.hint }}
 </mat-hint>
