--- a/src/app/formly-form-core/fields/currency-input-field/currency-input-field.component.html
+++ b/src/app/formly-form-core/fields/currency-input-field/currency-input-field.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="!to.encapsulateLabel" class="flex body-text">
-  <label [for]="field.id" [innerHTML]="(to._translationKeyLabel | translate) + (to.required ? ' *' : '') | tokens: to | keepHtml"></label>
+  <label [for]="field.id" [innerHTML]="to.label + (to.required ? ' *' : '') | keepHtml"></label>
 
-  <mat-icon *ngIf="to.help" class="label-help" [matTooltip]="to._translationKeyHelp | translate | tokens: to" matTooltipClass="mat-tooltip-content">help</mat-icon>
+  <mat-icon *ngIf="to.help" class="label-help" [matTooltip]="to.help" matTooltipClass="mat-tooltip-content">help</mat-icon>
 </div>
 
 <mat-form-field
@@ -11,7 +11,7 @@
   [ngClass]="{ 'no-label': !to.encapsulateLabel }">
 
   <mat-label *ngIf="to.encapsulateLabel" class="body-text">
-    {{ to._translationKeyLabel | translate | tokens: to }}
+    {{ to.label }}
   </mat-label>
 
   <input matInput
@@ -26,7 +26,7 @@
     (blur)="formatCurrencyInput()"
     [id]="field.id!"
     [spellcheck]="true"
-    [placeholder]="to._translationKeyPlaceholder | translate | tokens: to"
+    [placeholder]="to.placeholder ?? ''"
     [formlyAttributes]="field"
     [tabindex]="to.tabindex || 0" />
 
@@ -34,11 +34,11 @@
       <mat-select
         *ngIf="currencySelection"
         [id]="field.id!"
-        [aria-label]="currencySelection.templateOptions?.label | tokens: currencySelection.templateOptions"
+        [aria-label]="currencySelection.templateOptions?.label ?? ''"
         [formControl]="getFormControl(currencySelection.formControl!)"
         [formlyAttributes]="currencySelection"
         [disableOptionCentering]="true"
-        [placeholder]="currencySelection.templateOptions?.placeholder | tokens: currencySelection.templateOptions"
+        [placeholder]="currencySelection.templateOptions?.placeholder ?? ''"
         [required]="currencySelection.templateOptions?.required ?? false"
         [tabindex]="currencySelection.templateOptions?.tabindex || 0"
         [typeaheadDebounceInterval]="currencySelection.templateOptions?.typeaheadDebounceInterval">
