--- a/src/app/formly-form-core/fields/radio-button-field/radio-button-field.component.html
+++ b/src/app/formly-form-core/fields/radio-button-field/radio-button-field.component.html
@@ -8,14 +8,14 @@
 
   <fieldset class="fieldset" [ngClass]="to.classes">
     <legend class="flex body-text">
-      <div [innerHTML]="(to._translationKeyLabel | translate) + (to.required ? ' *' : '') | tokens: to | keepHtml"></div>
+      <div [innerHTML]="to.label + (to.required ? ' *' : '') | keepHtml"></div>
 
-      <mat-icon *ngIf="to.help" class="label-help" [matTooltip]="to._translationKeyHelp | translate | tokens: to" matTooltipClass="mat-tooltip-content">help</mat-icon>
+      <mat-icon *ngIf="to.help" class="label-help" [matTooltip]="to.help" matTooltipClass="mat-tooltip-content">help</mat-icon>
     </legend>
 
     <ng-container *ngFor="let option of selectOptions$ | async | sortOptions">
       <mat-radio-button class="mat-radio-button-wrap" [value]="option[valueProp]" [disabled]="option.disabled" [ngClass]="option.classes">
-        {{ option[labelProp] | translate | tokens: to }}
+        {{ option[labelProp] }}
       </mat-radio-button>
     </ng-container>
   </fieldset>
