--- a/src/app/formly-form-json-schema-builder/components/dependency-builder/dependency-builder.component.html
+++ b/src/app/formly-form-json-schema-builder/components/dependency-builder/dependency-builder.component.html
@@ -2,11 +2,11 @@
 
 <div class="flex fill-width">
   <div class="top-buttons center-content" [style.margin-left]="'auto'">
-    <button type="button" mat-button (click)="add()" [disabled]="formControl?.disabled">
+    <button type="button" mat-button (click)="add()" [disabled]="formControl.disabled">
       <div class="center-content flex">
         <mat-icon>add</mat-icon>
 
-        <div class="pad-left-half" translate>
+        <div class="pad-left-half">
           Add Dependency
         </div>
       </div>
