--- a/src/app/formly-form-json-schema-builder/components/expression/operator-condition/operator-condition.component.html
+++ b/src/app/formly-form-json-schema-builder/components/expression/operator-condition/operator-condition.component.html
@@ -4,7 +4,7 @@
       <div class="center-content flex">
         <mat-icon>add</mat-icon>
 
-        <div class="pad-left-half" translate>
+        <div class="pad-left-half">
           Add Condition
         </div>
       </div>
