--- a/src/app/formly-form-json-schema-builder/components/options-editor/options-editor.component.html
+++ b/src/app/formly-form-json-schema-builder/components/options-editor/options-editor.component.html
@@ -3,7 +3,7 @@
     <button type="button" mat-button (click)="add()" [disabled]="!disableReordering || formControl.disabled">
       <div class="center-content flex">
         <mat-icon>add</mat-icon>
-        <div class="pad-left-half" translate>
+        <div class="pad-left-half">
           Add Option
         </div>
       </div>
@@ -11,7 +11,7 @@
 
     <div class="margin-left toggle-mode">
       <button type="button" mat-button [disabled]="!field.fieldGroup?.length || formControl.disabled" (click)="disableReordering = !disableReordering;">
-        {{ disableReordering ? ('Reorder Options' | translate) : ('Edit Options' | translate) }}
+        {{ disableReordering ? 'Reorder Options' : 'Edit Options' }}
       </button>
     </div>
   </div>
@@ -21,7 +21,7 @@
   <table #optionsTable mat-table [dataSource]="field.fieldGroup || []" class="fill-width margin-bottom" cdkDropList (cdkDropListDropped)="drop($event)">
 
     <ng-container matColumnDef="value">
-      <th mat-header-cell *matHeaderCellDef class="table-cell" [style.width]="'30%'" translate>Key / Value</th>
+      <th mat-header-cell *matHeaderCellDef class="table-cell" [style.width]="'30%'">Key / Value</th>
       <td mat-cell *matCellDef="let row" class="body-cell table-cell">
 
         <div [ngStyle]="!selection.isSelected(row) && { 'display': 'none' } || {}">
@@ -36,7 +36,7 @@
     </ng-container>
 
     <ng-container matColumnDef="label">
-      <th mat-header-cell *matHeaderCellDef class="table-cell" translate>Label</th>
+      <th mat-header-cell *matHeaderCellDef class="table-cell">Label</th>
       <td mat-cell *matCellDef="let row" class="body-cell table-cell">
 
         <div [ngStyle]="!selection.isSelected(row) && { 'display': 'none' } || {}">
@@ -52,7 +52,7 @@
     </ng-container>
 
     <ng-container matColumnDef="edit">
-      <th mat-header-cell *matHeaderCellDef style="width: 5em;" class="table-cell" translate>Edit</th>
+      <th mat-header-cell *matHeaderCellDef style="width: 5em;" class="table-cell">Edit</th>
       <td mat-cell *matCellDef="let row">
 
         <div *ngIf="!disableReordering; else editIcons" cdkDragHandle>
@@ -63,7 +63,7 @@
         </div>
 
         <ng-template #editIcons>
-          <button type="button" mat-icon-button [attr.aria-label]="'Edit' | translate" (click)="selection.toggle(row)" [disabled]="formControl.disabled">
+          <button type="button" mat-icon-button [attr.aria-label]="'Edit'" (click)="selection.toggle(row)" [disabled]="formControl.disabled">
             <div class="center-content flex">
               <mat-icon *ngIf="!selection.isSelected(row)">edit</mat-icon>
               <mat-icon *ngIf="selection.isSelected(row)">done</mat-icon>
@@ -80,7 +80,7 @@
 
 <ng-template #noOptions>
   <div class="center-content flex fill">
-    <div class="title" translate>
+    <div class="title">
       No Options Configured
     </div>
   </div>
