--- a/src/app/formly-form-json-schema-builder/components/expression/expression-builder/expression-builder.component.html
+++ b/src/app/formly-form-json-schema-builder/components/expression/expression-builder/expression-builder.component.html
@@ -1,4 +1,4 @@
-<div class="body-text">{{ to.label }}</div>
+<div>{{ to.label }}</div>
 
 <div class="flex fill-width">
   <div class="top-buttons center-content" [style.margin-left]="'auto'">
