--- a/src/app/formly-form-core/fields/select-autocomplete-field/select-autocomplete-field.component.html
+++ b/src/app/formly-form-core/fields/select-autocomplete-field/select-autocomplete-field.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!to.encapsulateLabel" class="flex body-text">
+<div *ngIf="!to.encapsulateLabel" class="flex">
   <label [for]="field.id" [innerHTML]="to.label + (to.required ? ' *' : '') | keepHtml"></label>
 
   <mat-icon *ngIf="to.help" class="label-help" [matTooltip]="to.help" matTooltipClass="mat-tooltip-content">help</mat-icon>
@@ -10,7 +10,7 @@
   [appearance]="to.encapsulateLabel && to.appearance ? to.appearance : 'outline'"
   [floatLabel]="to.floatLabel || 'always'">
 
-  <mat-label *ngIf="to.encapsulateLabel" [for]="field.id" class="body-text">
+  <mat-label *ngIf="to.encapsulateLabel" [for]="field.id">
     {{ to.label }}
   </mat-label>
 
