--- a/src/app/formly-form-json-schema-builder/components/options-editor/options-editor.component.html
+++ b/src/app/formly-form-json-schema-builder/components/options-editor/options-editor.component.html
@@ -1,5 +1,5 @@
 <div class="flex fill-width">
-  <div class="top-buttons center-content body-text" [style.margin-left]="'auto'">
+  <div class="top-buttons center-content" [style.margin-left]="'auto'">
     <button type="button" mat-button (click)="add()" [disabled]="!disableReordering || formControl.disabled">
       <div class="center-content flex">
         <mat-icon>add</mat-icon>
